# PLPL

./: .gitignore  CMakeLists.txt  Lexer.py  Parser.py  README.md  example.txt  global_veriable.py  main.cpp  main.py
inter/: Access.h  And.h  Arithmetic-operator.h  Break.h  CMakeLists.txt  Constant.cpp  Constant.h  Do.h  Else.h  Expression.cpp  Expression.h  Identifier.h  If.h  Logical.cpp  Logical.h  Node.cpp  Node.h  Not.h  Operator.h  Or.cpp  Or.h  Relational.h  Set-elem.h  Set.h  Statement-sequence.h  Statement.cpp  Statement.h  Temporary.cpp  Temporary.h  Unary.h  While.h
lexer/: Array.h  CMakeLists.txt  Lexer.cpp  Lexer.h  NumericType.h  Token.cpp  Token.h  Type.cpp  Type.h  Word.cpp  Word.h
parser/: CMakeLists.txt  Environment.h  Parser.cpp  Parser.h
